add target blank to links

--- a/en/index.html
+++ b/en/index.html
@@ -54,13 +54,13 @@
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#github" />
             </svg>
-            <a href="https://github.com/ufaboy" class="link">ufaboy</a>
+            <a href="https://github.com/ufaboy" target="_blank" class="link">ufaboy</a>
           </div>
           <div>
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#linkedin" />
             </svg>
-            <a href="https://www.linkedin.com/in/azat-kashapov/" class="link"
+            <a href="https://www.linkedin.com/in/azat-kashapov/" target="_blank" class="link"
               >azat-kashapov</a
             >
           </div>
@@ -68,7 +68,7 @@
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#location" />
             </svg>
-            <a href="https://maps.app.goo.gl/Z7gLvs9sgq6Y9rUc6" class="link">
+            <a href="https://maps.app.goo.gl/Z7gLvs9sgq6Y9rUc6" target="_blank" class="link">
               Bar, Montenegro
             </a>
           </div>
@@ -150,7 +150,7 @@
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
-                <a href="https://forestvpn.com" class="link">ForestVPN</a>
+                <a href="https://forestvpn.com" target="_blank" class="link">ForestVPN</a>
               </div>
               <div>
                 <svg class="icon" fill="none">
@@ -226,7 +226,7 @@
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
-                <a href="https://letteros.com" class="link">Letteros</a>
+                <a href="https://letteros.com" target="_blank" class="link">Letteros</a>
               </div>
               <div>
                 <svg class="icon" fill="none">
@@ -277,7 +277,7 @@
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
-                <a href="https://2uit.ru" class="link">2UIT</a>
+                <a href="https://2uit.ru" target="_blank" class="link">2UIT</a>
               </div>
               <div>
                 <svg class="icon" fill="none">
@@ -290,7 +290,7 @@
           <div class="job-description">
             <p>
               Development of&nbsp;CRM for real estate agency
-              <a href="https://2uit.ru/realty-crm" class="link">Perspektiva24</a
+              <a href="https://2uit.ru/realty-crm" target="_blank" class="link">Perspektiva24</a
               >. First experience with the frontend. Made a&nbsp;lot
               of&nbsp;pages on&nbsp;Vue2. Integration of&nbsp;various services
               (Yandex Map, IP&nbsp;telephony, call record storage, etc.) Later
@@ -303,7 +303,7 @@
             </p>
             <p>
               CRM development for
-              <a href="https://2uit.ru/lr-mobile-webservice" class="link"
+              <a href="https://2uit.ru/lr-mobile-webservice" target="_blank" class="link"
                 >LR&nbsp;Service</a
               >
               Something like &laquo;UBER&raquo; for masters of&nbsp;repair and
