--- a/ru/index.html
+++ b/ru/index.html
@@ -54,13 +54,13 @@
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#github" />
             </svg>
-            <a href="https://github.com/ufaboy" class="link">ufaboy</a>
+            <a href="https://github.com/ufaboy" target="_blank" class="link">ufaboy</a>
           </div>
           <div>
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#linkedin" />
             </svg>
-            <a href="https://www.linkedin.com/in/azat-kashapov/" class="link">
+            <a href="https://www.linkedin.com/in/azat-kashapov/" target="_blank" class="link">
               azat-kashapov
             </a>
           </div>
@@ -68,13 +68,15 @@
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#telegram" />
             </svg>
-            <a href="https://t.me/ufaboy" class="link"> @ufaboy </a>
+            <a href="https://t.me/ufaboy" target="_blank" class="link"> @ufaboy </a>
           </div>
           <div>
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#location" />
             </svg>
-            Bar, Montenegro
+            <a href="https://maps.app.goo.gl/Z7gLvs9sgq6Y9rUc6" target="_blank" class="link">
+              Bar, Montenegro
+            </a>
           </div>
           <div>
             <svg class="icon" fill="none">
@@ -144,7 +146,7 @@
               </div>
             </div>
             <div class="job-head__line inline text-grey text-small">
-              <a href="https://forestvpn.com" class="link">
+              <a href="https://forestvpn.com" target="_blank" class="link">
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
@@ -214,7 +216,7 @@
               </div>
             </div>
             <div class="job-head__line inline text-grey text-small">
-              <a href="https://letteros.com" class="link">
+              <a href="https://letteros.com" target="_blank" class="link">
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
@@ -264,7 +266,7 @@
               </div>
             </div>
             <div class="job-head__line inline text-grey text-small">
-              <a href="https://2uit.ru" class="link">
+              <a href="https://2uit.ru" target="_blank" class="link">
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
@@ -281,7 +283,7 @@
           <div class="job-description">
             <p>
               Разработка CRM сети агентств недвижимости
-              <a href="https://2uit.ru/realty-crm" class="link">Перспектива24</a
+              <a href="https://2uit.ru/realty-crm" target="_blank" class="link">Перспектива24</a
               >. Первый опыт с&nbsp;фронтом. Написал кучу страниц на&nbsp;Vue2.
               Интеграция различных сервисов (Yandex Map, и&nbsp;прочее) Позже
               подключился к&nbsp;доработке бэка на&nbsp;Yii2. Доработка готовых
@@ -292,7 +294,7 @@
             </p>
             <p>
               Разработка CRM для
-              <a href="https://2uit.ru/lr-mobile-webservice" class="link"
+              <a href="https://2uit.ru/lr-mobile-webservice" target="_blank" class="link"
                 >LR&nbsp;Service</a
               >. Что то&nbsp;вроде &laquo;UBER&raquo; для мастеров
               по&nbsp;ремонту и&nbsp;установке техники Целиком написал фронт
