--- a/ru/index.html
+++ b/ru/index.html
@@ -19,7 +19,7 @@
     <meta property="og:locale" content="ru_RU" />
     <meta property="profile:first_name" content="Азат" />
     <meta property="profile:last_name" content="Кашапов" />
-    <link rel="manifest" href="site.webmanifest" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href="../css/main.css" />
