--- a/ru/index.html
+++ b/ru/index.html
@@ -145,12 +145,12 @@
               </div>
             </div>
             <div class="job-head__line inline text-grey text-small">
-              <a href="https://forestvpn.com" target="_blank" class="link">
+              <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
-                <b>ForestVPN</b>
-              </a>
+                <a href="https://forestvpn.com" target="_blank" class="link">ForestVPN</a>
+              </div>
               <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#calendar" />
@@ -215,12 +215,12 @@
               </div>
             </div>
             <div class="job-head__line inline text-grey text-small">
-              <a href="https://letteros.com" target="_blank" class="link">
+              <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
-                <b>Letteros</b>
-              </a>
+                <a href="https://letteros.com" target="_blank" class="link">Letteros</a>
+              </div>
               <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#calendar" />
@@ -265,12 +265,12 @@
               </div>
             </div>
             <div class="job-head__line inline text-grey text-small">
-              <a href="https://2uit.ru" target="_blank" class="link">
+              <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
-                <b>2UIT</b>
-              </a>
+                <a href="https://2uit.ru" target="_blank" class="link">2UIT</a>
+              </div>
               <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#calendar" />
@@ -316,12 +316,12 @@
               </div>
             </div>
             <div class="job-head__line inline text-grey text-small">
-              <a href="#" class="link">
+              <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
-                <b>Freelance</b>
-              </a>
+                <a href="#" class="link">Freelance</a>
+              </div>
               <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#calendar" />
