--- a/ru/index.html
+++ b/ru/index.html
@@ -103,7 +103,7 @@
         </div>
       </section>
       <section class="description">
-        <span>Что я могу дать:</span>
+        <h2>Что я могу дать:</h2>
         <ol>
           <li>Крутую верстку;</li>
           <li>
@@ -117,7 +117,7 @@
           <li>Сделаю npm библиотеку для переиспользуемого кода;</li>
           <li>Могу сделать Web Extension и&nbsp;Web Components;</li>
         </ol>
-        <span>Что я могу дать:</span>
+        <h2>Что я могу дать:</h2>
         <ol>
           <li>
             Продукт, за&nbsp;который радеет команда, любимый и&nbsp;пестуемый;
