rewrite job titles

--- a/en/index.html
+++ b/en/index.html
@@ -53,13 +53,23 @@
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#github" />
             </svg>
-            <a href="https://github.com/ufaboy" target="_blank" class="link">ufaboy</a>
+            <a
+              href="https://github.com/ufaboy"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="link"
+              >ufaboy</a
+            >
           </div>
           <div>
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#linkedin" />
             </svg>
-            <a href="https://www.linkedin.com/in/azat-kashapov/" target="_blank" class="link"
+            <a
+              href="https://www.linkedin.com/in/azat-kashapov/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="link"
               >azat-kashapov</a
             >
           </div>
@@ -67,7 +77,12 @@
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#location" />
             </svg>
-            <a href="https://maps.app.goo.gl/Z7gLvs9sgq6Y9rUc6" target="_blank" class="link">
+            <a
+              href="https://maps.app.goo.gl/Z7gLvs9sgq6Y9rUc6"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="link"
+            >
               Bar, Montenegro
             </a>
           </div>
@@ -75,7 +90,7 @@
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#timezone" />
             </svg>
-            Timezone: <abbr title="GMT+1/2">CET/CEST</abbr> 
+            Timezone: <abbr title="GMT+1/2">CET/CEST</abbr>
           </div>
         </address>
       </section>
@@ -135,27 +150,30 @@
         <div class="job">
           <div class="job-head">
             <div class="job-head__line">
-              <div>Frontend Engineer</div>
+              <div class="job-head__title">
+                <span
+                  >Frontend Engineer at
+                  <a
+                    href="https://forestvpn.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="link"
+                    >ForestVPN</a
+                  ></span
+                >
+                <div class="text-grey text-small">
+                  <svg class="icon" fill="none">
+                    <use xlink:href="../img/iconSprite.svg#calendar" />
+                  </svg>
+                  2022 - current
+                </div>
+              </div>
               <div class="skill-set">
                 <span class="skill">Vue</span>
                 <span class="skill">TypeScript</span>
                 <span class="skill">Tailwind</span>
                 <span class="skill">Nuxt</span>
                 <span class="skill">Web Extensions</span>
-              </div>
-            </div>
-            <div class="job-head__line inline text-grey text-small">
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#work" />
-                </svg>
-                <a href="https://forestvpn.com" target="_blank" class="link">ForestVPN</a>
-              </div>
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#calendar" />
-                </svg>
-                2022 - current
               </div>
             </div>
           </div>
@@ -212,26 +230,29 @@
         <div class="job">
           <div class="job-head">
             <div class="job-head__line">
-              <div>Full-stack Engineer</div>
+              <div class="job-head__title">
+                <span
+                  >Full-Stack Engineer at
+                  <a
+                    href="https://letteros.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="link"
+                    >Letteros</a
+                  ></span
+                >
+                <div class="text-grey text-small">
+                  <svg class="icon" fill="none">
+                    <use xlink:href="../img/iconSprite.svg#calendar" />
+                  </svg>
+                  2021 - 2022
+                </div>
+              </div>
               <div class="skill-set">
                 <span class="skill">Vue</span>
                 <span class="skill">TypeScript</span>
                 <span class="skill">PHP</span>
                 <span class="skill">PostgreSQL</span>
-              </div>
-            </div>
-            <div class="job-head__line inline text-grey text-small">
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#work" />
-                </svg>
-                <a href="https://letteros.com" target="_blank" class="link">Letteros</a>
-              </div>
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#calendar" />
-                </svg>
-                2021 - 2022
               </div>
             </div>
           </div>
@@ -262,7 +283,24 @@
         <div class="job">
           <div class="job-head">
             <div class="job-head__line">
-              <div>Full-stack Engineer</div>
+              <div class="job-head__title">
+                <span
+                  >Full-Stack Engineer at
+                  <a
+                    href="https://2uit.ru"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="link"
+                    >2UIT</a
+                  ></span
+                >
+                <div class="text-grey text-small">
+                  <svg class="icon" fill="none">
+                    <use xlink:href="../img/iconSprite.svg#calendar" />
+                  </svg>
+                  2020 - 2021
+                </div>
+              </div>
               <div class="skill-set">
                 <span class="skill">Vue</span>
                 <span class="skill">TypeScript</span>
@@ -271,25 +309,16 @@
                 <span class="skill">MySQL</span>
               </div>
             </div>
-            <div class="job-head__line inline text-grey text-small">
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#work" />
-                </svg>
-                <a href="https://2uit.ru" target="_blank" class="link">2UIT</a>
-              </div>
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#calendar" />
-                </svg>
-                2020 - 2021
-              </div>
-            </div>
           </div>
           <div class="job-description">
             <p>
               Development of&nbsp;CRM for real estate agency
-              <a href="https://2uit.ru/realty-crm" target="_blank" class="link">Perspektiva24</a
+              <a
+                href="https://2uit.ru/realty-crm"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="link"
+                >Perspektiva24</a
               >. First experience with the frontend. Made a&nbsp;lot
               of&nbsp;pages on&nbsp;Vue2. Integration of&nbsp;various services
               (Yandex Map, IP&nbsp;telephony, call record storage, etc.) Later
@@ -302,7 +331,11 @@
             </p>
             <p>
               CRM development for
-              <a href="https://2uit.ru/lr-mobile-webservice" target="_blank" class="link"
+              <a
+                href="https://2uit.ru/lr-mobile-webservice"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="link"
                 >LR&nbsp;Service</a
               >
               Something like &laquo;UBER&raquo; for masters of&nbsp;repair and
@@ -321,25 +354,22 @@
         <div class="job">
           <div class="job-head">
             <div class="job-head__line">
-              <div>Full-stack Engineer</div>
+              <div class="job-head__title">
+                <span
+                  >Full-Stack Developer at
+                  <a href="#" class="link">Freelance</a></span
+                >
+                <div class="text-grey text-small">
+                  <svg class="icon" fill="none">
+                    <use xlink:href="../img/iconSprite.svg#calendar" />
+                  </svg>
+                  2018 - 2021
+                </div>
+              </div>
               <div class="skill-set">
                 <span class="skill">Vue</span>
                 <span class="skill">PHP</span>
                 <span class="skill">MySQL</span>
-              </div>
-            </div>
-            <div class="job-head__line inline text-grey text-small">
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#work" />
-                </svg>
-                <a href="#" class="link">Freelance</a>
-              </div>
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#calendar" />
-                </svg>
-                2018 - 2021
               </div>
             </div>
           </div>
