--- a/ru/index.html
+++ b/ru/index.html
@@ -53,13 +53,24 @@
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#github" />
             </svg>
-            <a href="https://github.com/ufaboy" target="_blank" class="link">ufaboy</a>
+            <a
+              href="https://github.com/ufaboy"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="link"
+              >ufaboy</a
+            >
           </div>
           <div>
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#linkedin" />
             </svg>
-            <a href="https://www.linkedin.com/in/azat-kashapov/" target="_blank" class="link">
+            <a
+              href="https://www.linkedin.com/in/azat-kashapov/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="link"
+            >
               azat-kashapov
             </a>
           </div>
@@ -67,13 +78,25 @@
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#telegram" />
             </svg>
-            <a href="https://t.me/ufaboy" target="_blank" class="link"> @ufaboy </a>
+            <a
+              href="https://t.me/ufaboy"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="link"
+            >
+              @ufaboy
+            </a>
           </div>
           <div>
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#location" />
             </svg>
-            <a href="https://maps.app.goo.gl/Z7gLvs9sgq6Y9rUc6" target="_blank" class="link">
+            <a
+              href="https://maps.app.goo.gl/Z7gLvs9sgq6Y9rUc6"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="link"
+            >
               Bar, Montenegro
             </a>
           </div>
@@ -81,7 +104,7 @@
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#timezone" />
             </svg>
-            Timezone: <abbr title="GMT+1/2">CET/CEST</abbr> 
+            Timezone: <abbr title="GMT+1/2">CET/CEST</abbr>
           </div>
         </div>
       </section>
@@ -135,27 +158,30 @@
         <div class="job">
           <div class="job-head">
             <div class="job-head__line">
-              <div>Frontend Engineer</div>
+              <div class="job-head__title">
+                <span
+                  >Frontend Engineer в
+                  <a
+                    href="https://forestvpn.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="link"
+                    >ForestVPN</a
+                  ></span
+                >
+                <div class="text-grey text-small">
+                  <svg class="icon" fill="none">
+                    <use xlink:href="../img/iconSprite.svg#calendar" />
+                  </svg>
+                  2022 - current
+                </div>
+              </div>
               <div class="skill-set">
                 <span class="skill">Vue</span>
                 <span class="skill">TypeScript</span>
                 <span class="skill">Tailwind</span>
                 <span class="skill">Nuxt</span>
                 <span class="skill">Web Extensions</span>
-              </div>
-            </div>
-            <div class="job-head__line inline text-grey text-small">
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#work" />
-                </svg>
-                <a href="https://forestvpn.com" target="_blank" class="link">ForestVPN</a>
-              </div>
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#calendar" />
-                </svg>
-                2022 - current
               </div>
             </div>
           </div>
@@ -172,10 +198,7 @@
               Ну&nbsp;и&nbsp;самое интересное для меня сделал Web Extension для
               управления VPN из&nbsp;браузера
             </p>
-            <p>
-              Сделал также несколько side<br />
-              projects:
-            </p>
+            <p>Сделал также несколько side projects:</p>
             <ul>
               <li>
                 Сайт для поиска моделей OF&nbsp;(Nuxt3), довел до&nbsp;релиза,
@@ -206,26 +229,29 @@
         <div class="job">
           <div class="job-head">
             <div class="job-head__line">
-              <div>Full-stack Engineer</div>
+              <div class="job-head__title">
+                <span
+                  >Full-Stack Engineer в
+                  <a
+                    href="https://letteros.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="link"
+                    >Letteros</a
+                  ></span
+                >
+                <div class="text-grey text-small">
+                  <svg class="icon" fill="none">
+                    <use xlink:href="../img/iconSprite.svg#calendar" />
+                  </svg>
+                  2021 - 2022
+                </div>
+              </div>
               <div class="skill-set">
                 <span class="skill">Vue</span>
                 <span class="skill">TypeScript</span>
                 <span class="skill">PHP</span>
                 <span class="skill">PostgreSQL</span>
-              </div>
-            </div>
-            <div class="job-head__line inline text-grey text-small">
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#work" />
-                </svg>
-                <a href="https://letteros.com" target="_blank" class="link">Letteros</a>
-              </div>
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#calendar" />
-                </svg>
-                2021 - 2022
               </div>
             </div>
           </div>
@@ -240,8 +266,12 @@
               и&nbsp;навигацию по&nbsp;версиям документа.
             </p>
             <p>
-              <b>Бэк</b>: На&nbsp;1/3 задач пишу <abbr title="Representational state transfer application programming interface" lang="en"
-              >REST API</abbr>
+              <b>Бэк</b>: На&nbsp;1/3 задач пишу
+              <abbr
+                title="Representational state transfer application programming interface"
+                lang="en"
+                >REST API</abbr
+              >
               на&nbsp;Yii2, на&nbsp;остальные 2/3 участвую больше
               консультациями, советами, ревью кода и&nbsp;идей. В&nbsp;целом
               обычный
@@ -255,7 +285,24 @@
         <div class="job">
           <div class="job-head">
             <div class="job-head__line">
-              <div>Full-stack Engineer</div>
+              <div class="job-head__title">
+                <span
+                  >Full-Stack Engineer в
+                  <a
+                    href="https://2uit.ru"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="link"
+                    >2UIT</a
+                  ></span
+                >
+                <div class="text-grey text-small">
+                  <svg class="icon" fill="none">
+                    <use xlink:href="../img/iconSprite.svg#calendar" />
+                  </svg>
+                  2020 - 2021
+                </div>
+              </div>
               <div class="skill-set">
                 <span class="skill">Vue</span>
                 <span class="skill">TypeScript</span>
@@ -264,25 +311,16 @@
                 <span class="skill">MySQL</span>
               </div>
             </div>
-            <div class="job-head__line inline text-grey text-small">
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#work" />
-                </svg>
-                <a href="https://2uit.ru" target="_blank" class="link">2UIT</a>
-              </div>
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#calendar" />
-                </svg>
-                2020 - 2021
-              </div>
-            </div>
           </div>
           <div class="job-description">
             <p>
               Разработка CRM сети агентств недвижимости
-              <a href="https://2uit.ru/realty-crm" target="_blank" class="link">Перспектива24</a
+              <a
+                href="https://2uit.ru/realty-crm"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="link"
+                >Перспектива24</a
               >. Первый опыт с&nbsp;фронтом. Написал кучу страниц на&nbsp;Vue2.
               Интеграция различных сервисов (Yandex Map, и&nbsp;прочее) Позже
               подключился к&nbsp;доработке бэка на&nbsp;Yii2. Доработка готовых
@@ -293,13 +331,21 @@
             </p>
             <p>
               Разработка CRM для
-              <a href="https://2uit.ru/lr-mobile-webservice" target="_blank" class="link"
+              <a
+                href="https://2uit.ru/lr-mobile-webservice"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="link"
                 >LR&nbsp;Service</a
               >. Что то&nbsp;вроде &laquo;UBER&raquo; для мастеров
               по&nbsp;ремонту и&nbsp;установке техники Целиком написал фронт
               на&nbsp;Nuxt, и&nbsp;большую часть бэка на&nbsp;Yii2. Бэк
-              в&nbsp;целом простой <abbr title="Representational state transfer application programming interface" lang="en"
-              >REST API</abbr>, но&nbsp;были нетривиальные, и&nbsp;интересные задачи (например
+              в&nbsp;целом простой
+              <abbr
+                title="Representational state transfer application programming interface"
+                lang="en"
+                >REST API</abbr
+              >, но&nbsp;были нетривиальные, и&nbsp;интересные задачи (например
               найти ближайшего мастера).
             </p>
           </div>
@@ -308,25 +354,22 @@
         <div class="job">
           <div class="job-head">
             <div class="job-head__line">
-              <div>Full-stack Engineer</div>
+              <div class="job-head__title">
+                <span
+                  >Full-Stack Engineer в
+                  <a href="#" class="link">Freelance</a></span
+                >
+                <div class="text-grey text-small">
+                  <svg class="icon" fill="none">
+                    <use xlink:href="../img/iconSprite.svg#calendar" />
+                  </svg>
+                  2018 - 2021
+                </div>
+              </div>
               <div class="skill-set">
                 <span class="skill">Vue</span>
                 <span class="skill">PHP</span>
                 <span class="skill">MySQL</span>
-              </div>
-            </div>
-            <div class="job-head__line inline text-grey text-small">
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#work" />
-                </svg>
-                <a href="#" class="link">Freelance</a>
-              </div>
-              <div>
-                <svg class="icon" fill="none">
-                  <use xlink:href="../img/iconSprite.svg#calendar" />
-                </svg>
-                2018 - 2021
               </div>
             </div>
           </div>
