add meta description

--- a/en/index.html
+++ b/en/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Azat Kashapov</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Azat Kashapov's professional portfolio - an experienced Software Engineer specializing in Frontend technologies including Vue, TypeScript, and Tailwind CSS. Discover my skills, projects, and work history in developing high-quality web applications and solutions.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Azat Kashapov - Frontend Engineer" />
     <meta property="og:type" content="profile" />
@@ -41,7 +41,7 @@
         </figure>
         <hr />
         <address class="contact-info">
-          <div>
+          <div class="contact-block">
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#mail" />
             </svg>
@@ -49,7 +49,7 @@
               >azat.developer@gmail.com</a
             >
           </div>
-          <div>
+          <div class="contact-block">
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#github" />
             </svg>
@@ -61,7 +61,7 @@
               >ufaboy</a
             >
           </div>
-          <div>
+          <div class="contact-block">
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#linkedin" />
             </svg>
@@ -73,7 +73,7 @@
               >azat-kashapov</a
             >
           </div>
-          <div>
+          <div class="contact-block">
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#location" />
             </svg>
@@ -86,7 +86,7 @@
               Bar, Montenegro
             </a>
           </div>
-          <div>
+          <div class="contact-block">
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#timezone" />
             </svg>
