--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Azat Kashapov</title>
-  <meta name="description" content="">
+  <meta name="description" content="Azat Kashapov's professional portfolio - an experienced Software Engineer specializing in Frontend technologies including Vue, TypeScript, and Tailwind CSS. Discover my skills, projects, and work history in developing high-quality web applications and solutions.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="Azat Kashapov - Frontend Engineer" />
   <meta property="og:type" content="profile" />
