--- a/ru/index.html
+++ b/ru/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Азат Кашапов</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Профессиональное портфолио Азата Кашапова - опытного инженера-программиста, специализирующегося на фронтенд технологиях, включая Vue, TypeScript и Tailwind CSS. Ознакомьтесь с моими навыками, проектами и опытом работы в разработке качественных веб-приложений и решений.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Азат Кашапов - Frontend Engineer" />
     <meta property="og:type" content="profile" />
@@ -41,7 +41,7 @@
         </figure>
         <hr />
         <div class="contact-info">
-          <div>
+          <div class="contact-block">
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#mail" />
             </svg>
@@ -49,7 +49,7 @@
               azat.developer@gmail.com
             </a>
           </div>
-          <div>
+          <div class="contact-block">
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#github" />
             </svg>
@@ -61,7 +61,7 @@
               >ufaboy</a
             >
           </div>
-          <div>
+          <div class="contact-block">
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#linkedin" />
             </svg>
@@ -74,7 +74,7 @@
               azat-kashapov
             </a>
           </div>
-          <div>
+          <div class="contact-block">
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#telegram" />
             </svg>
@@ -87,7 +87,7 @@
               @ufaboy
             </a>
           </div>
-          <div>
+          <div class="contact-block">
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#location" />
             </svg>
@@ -100,7 +100,7 @@
               Bar, Montenegro
             </a>
           </div>
-          <div>
+          <div class="contact-block">
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#timezone" />
             </svg>
